Multiple changes to fix bugs